   from a libvlc_media
 * Add libvlc_media_player_(get|set)_role to set the media role
 * Add libvlc_media_player_add_slave to replace libvlc_video_set_subtitle_file,
   working with MRL and supporting also audio slaves
 * Add vlc_epg_event_(New|Delete|Duplicate), vlc_epg_AddEvent, vlc_epg_Duplicate
   and removes vlc_epg_Merge

Logging
 * Support for the SystemD Journal
 * Use --syslog and --syslog-debug command line options to include debug
   messages in syslog. With --syslog, errors and warnings will be sent only.
 * New Android module for logging

Misc
 * remove langfromtelx
 * remove ZPL playlist format
 * Update libVLC doxygen modules
 * Add a text-to-speech renderer for subtitles on OS X/iOS
 * Add a text-to-speech renderer for subtitles on Windows
 * Add Gnome libsecret-based crypto keystore
 * Add KDE Kwallet-based crypto keystore
 * Add a memory keystore
 * Add a file keystore that can use a submodule to crypt secrets
 * Add Keychain based crypto keystore for iOS, Mac OS X and tvOS

Removed modules
 * Atmo video filter
 * QTCapture access module (use AVCapture instead)
 * httplive (use adaptive instead)
 * smooth (use adaptive instead)
 * Gnome-VFS access module (i.e. Gnome 2.x)
 * QuartzText text renderer module (use Freetype instead)
 * Win32 GDI text renderer module (use Freetype instead)
 * Growl notification (replaced by osx_notifications)
 * VCDX "extended" Video CD access module (use the normal VCD module)
 * Mac OS X Dialog Provider (use VLCKit instead)
 * iOS Dialog Provider (use MobileVLCKit / TVVLCKit instead)
 * QuickTime decoder module (use native codecs)
 * BD access module (use libbluray)
 * Direct2D module (use Direct3D11)
 * EyeTV access module
 * Rar access and stream filter: use libarchive
 * VDA decoder: use VT
 * Audioqueue: use audiounit
 * SDL video output module
 * DirectFB video output module
 * RAOP stream output module


Changes between 2.2.5 and 2.2.5.1:
--------------------------------
