@@ -192,6 +192,9 @@ libvlc_media_player_set_equalizer
 libvlc_media_player_set_evas_object
 libvlc_media_player_set_hwnd
 libvlc_media_player_set_media
+libvlc_media_player_set_nacl_pp_instance
+libvlc_media_player_set_nacl_get_ppb_interface
+libvlc_media_player_set_nacl_pp_view
 libvlc_media_player_set_nsobject
 libvlc_media_player_set_position
 libvlc_media_player_set_rate
