@@ -268,6 +268,9 @@ libVLC:
    working with MRL and supporting also audio slaves
  * Add vlc_epg_event_(New|Delete|Duplicate), vlc_epg_AddEvent, vlc_epg_Duplicate
    and removes vlc_epg_Merge
+ * Add libvlc_media_player_set_nacl_pp_instance
+ * Add libvlc_media_player_set_nacl_get_ppb_interface
+ * Add libvlc_media_player_set_nacl_pp_view
 
 Logging
  * Support for the SystemD Journal
